syntax = "proto3";
package core.protos.connectors;

import "google/protobuf/wrappers.proto";
import "core/protos/base.proto";
import "core/protos/connectors/api.proto";

message AsanaProjectAssetModel {
  message Workspace {
    google.protobuf.StringValue workspace_id = 1;
    google.protobuf.StringValue workspace_name = 2;
  }

  google.protobuf.StringValue project_id = 1;
  google.protobuf.StringValue project_name = 2;
  Workspace workspace = 3;
  AsanaAlertOpsConfiguration alert_ops_configuration = 4;
}

message AsanaProjectAssetOptions {
  repeated string project_ids = 1;
}

message AsanaAssetModel {
  google.protobuf.UInt64Value id = 1;
  Source connector_type = 2;
  SourceModelType type = 3;
  sfixed64 last_updated = 4;

  oneof asset {
    AsanaProjectAssetModel asana_project = 5;
  }
}

message AsanaAssets {
  repeated AsanaAssetModel assets = 1;
}
